Increased site responsiveness at 500px & 800px

--- a/style/index.css
+++ b/style/index.css
@@ -49,13 +49,12 @@ table {
 }
 
 html {
-    font-size: 10px;
-    background-color: lightgray;
+    font-size: 62.5%;
 }
 
 body {
-    background-color: #626363;
-    margin: 1rem;
+    background-color: #76B3C2;
+   
 }
 
 header {
@@ -65,79 +64,166 @@ header {
     margin: 1rem;
 }
 
+/*
+====================
+Text/Font properties
+====================
+*/
+
 h1 {
     font-size: 5rem;
+    color: #2C7B8F;
+    text-shadow: 1px 1px black;
 }
 
 h3 {
     font-size: 4rem;
-    color: white;
-    text-shadow: 3px 2px black;
+    color: #76B3C2;
+    text-shadow: 2px 2px #2C7B8F;
 }
 
 a, p {
     font-size: 1.6rem;
 }
 
-nav a, footer a {
+.Link {
     text-decoration: none;
     border: solid black 1px;
-    color: black;
+    color: #AFF5DD;
     padding: .5rem;
-    background-color: lightgray;
+    background-color: #2C7B8F;
 }
 
-div.img1 a {
-    text-decoration: none;
-    border: solid black 1px;
-    background-color: lightgray;
-    color: black;
-    padding: .5rem;
+.Link:hover {
+    background: #F67771;
 }
 
-nav a:hover, div.img1 a:hover, footer a:hover {
-    color: white;
-    background: black;
-}
-
-section.mainImg {
+section {
     display: flex;
     justify-content: center;
+}
+
+section div.img1 {
+    margin-top: 5rem;
+    height:50vh;
+    width: 50%;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-image: url(https://picsum.photos/1000);
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position: bottom;
+}
+
+div.temporary {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60vh;
+}
+
+div.temporary section {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+div.temporary section div.image {
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-image: url(https://picsum.photos/350);
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position: bottom;
+    width: 350px;   
+    height: 15vh;
     margin: 2rem;
 }
 
-div.img1 {
-    width: 70%;
-    height: 50rem;
-    background: url(https://picsum.photos/1400);
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-flow: column wrap;
-    align-items: center;
-}
-
-section.footerImgs, section.footerTxt {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
-.image {
-    margin: 3rem;
-    border: 1px solid black;
-    background: url(https://picsum.photos/250);
-    height: 25rem;
-    width: 25rem;
-}
-
 footer {
-    width: 100%;
-    height: 10rem;
-    margin-top: 1rem;
-    margin-bottom: 0;
-    background-color: lightgray;
-    display: flex;
+    display: flex; 
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
+
+@media (max-width: 800px) {
+    section div.img1 {
+        width: 70%;
+        height: 30vh;
+    }
+
+    div.temporary section {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div.temporary section div.image {
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background-image: url(https://picsum.photos/200);
+        background-repeat:no-repeat;
+        background-size:cover;
+        background-position: bottom;
+        width: 200px;   
+        height: 15vh;
+        margin: 2rem;
+    }
+}
+
+
+
+@media (max-width: 500px) {
+
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        margin: 10px 0;
+    }
+
+    section div.img1 {
+        width: 100%;
+        height: 30vh;
+    }
+
+    div.temporary section {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    div.temporary section div.image {
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background-image: url(https://picsum.photos/200);
+        background-repeat:no-repeat;
+        background-size:cover;
+        background-position: bottom;
+        width: 150px;   
+        height: 12vh;
+        margin: 2rem;
+    }
+}
+
